--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 
 	  <nav>
         <ul>
-            <li><a href="https://example.com/link1">Home</a></li>
-            <li><a href="https://example.com/link2">About</a></li>
-            <li><a href="https://example.com/link3">Contact</a></li>
+            <li><a href="link1">Home</a></li>
+            <li><a href="link2">About</a></li>
+            <li><a href="link3">Contact</a></li>
         </ul>
     </nav>
 
