--- a/main.html
+++ b/main.html
@@ -4,17 +4,17 @@
 
 <head>
 	    <title>Navbar and Audios</title>
-	<link rel="stylesheet" href="styles.css">
+	    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
 
 	  <nav>
-        <ul>
-            <li><a href="link1">Home</a></li>
-            <li><a href="link2">About</a></li>
-            <li><a href="link3">Contact</a></li>
+		   <ul>
+            <li><a href="https://example.com/link1">Home</a></li>
+            <li><a href="https://example.com/link2">About</a></li>
+            <li><a href="https://example.com/link3">Contact</a></li>
         </ul>
     </nav>
 
