--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
 
+ <!-- Part 1: Semantic Navigation Bar -->
 	  <nav>
 		   <ul>
             <li><a href="https://example.com/link1">Home</a></li>
@@ -17,7 +17,7 @@
             <li><a href="https://example.com/link3">Contact</a></li>
         </ul>
     </nav>
-
+ <!-- Part 2: Audio Section -->
 	  <section>
         <h2>3 Random Audios</h2>
         <audio controls>
