--- a/main.html
+++ b/main.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	    <title>Navbar and Audios</title>
-	    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navbar and Audio Section</title>
 </head>
-
 <body>
 
- <!-- Part 1: Semantic Navigation Bar -->
-	  <nav>
-		   <ul>
-            <li><a href="https://example.com/link1">Home</a></li>
-            <li><a href="https://example.com/link2">About</a></li>
-            <li><a href="https://example.com/link3">Contact</a></li>
+    <!-- Part 1: Semantic Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="https://example.com/home">Home</a></li>
+            <li><a href="https://example.com/about">About</a></li>
+            <li><a href="https://example.com/contact">Contact</a></li>
         </ul>
     </nav>
- <!-- Part 2: Audio Section -->
-	  <section>
-        <h1>3 Random Audios</h1>
+
+    <!-- Part 2: Audio Section -->
+    <section>
+        <h2>3 Random Audios</h2>
         <audio controls>
             <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -35,9 +34,6 @@
             Your browser does not support the audio element.
         </audio>
     </section>
-    <script type="text/javascript" src="./script.js">
-</script>
 
 </body>
-
 </html>
